--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,45 +1,28 @@
-name: ci
-
-on:
-  push:
-    branches:
-      - main
-      - master
-  pull_request:
-    branches:
-      - main
-      - master
-
+name: GitHub Actions
+on: [push]
 jobs:
-  ci:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node: [14]
-
+  install:
+    runs-on: ubuntu-latest
+    container: node:14-alpine
     steps:
-      - name: Checkout 🛎
-        uses: actions/checkout@master
+      - name: install
+      - run: npm install --loglevel=error
 
-      - name: Setup node env 🏗
-        uses: actions/setup-node@v2.1.5
-        with:
-          node-version: ${{ matrix.node }}
-          check-latest: true
+  lint:
+    needs: install
+    runs-on: ubuntu-latest
+    container: node:14-alpine
+    steps:
+      - name: lint
+      - run: npm run lint
 
-      - name: Cache node_modules 📦
-        uses: actions/cache@v2.1.4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+      - name: csslint
+      - run: npm run csslint
 
-      - name: Install dependencies 👨🏻‍💻
-        run: npm ci --prefer-offline --no-audit
-
-
-      - name: Run tests 🧪
-        run: npm run test
+  test:
+    needs: install
+    runs-on: ubuntu-latest
+    container: node:14-alpine
+    steps:
+      - name: test
+      - run: npm run test
