--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     container: node:14-alpine
     steps:
+      - name: checkout
+      - uses: actions/checkout@v2
       - name: install
       - run: npm install --loglevel=error
 
@@ -26,3 +28,50 @@ jobs:
     steps:
       - name: test
       - run: npm run test
+
+
+#name: ci
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#      - master
+#  pull_request:
+#    branches:
+#      - main
+#      - master
+#
+#jobs:
+#  ci:
+#    runs-on: ${{ matrix.os }}
+#
+#    strategy:
+#      matrix:
+#        os: [ubuntu-latest]
+#        node: [14]
+#
+#    steps:
+#      - name: Checkout 🛎
+#        uses: actions/checkout@master
+#
+#      - name: Setup node env 🏗
+#        uses: actions/setup-node@v2.1.5
+#        with:
+#          node-version: ${{ matrix.node }}
+#          check-latest: true
+#
+#      - name: Cache node_modules 📦
+#        uses: actions/cache@v2.1.4
+#        with:
+#          path: ~/.npm
+#          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#          restore-keys: |
+#            ${{ runner.os }}-node-
+#
+#      - name: Install dependencies 👨🏻‍💻
+#        run: npm ci --prefer-offline --no-audit
+#
+#
+#      - name: Run tests 🧪
+#        run: npm run test
