--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,22 @@
 name: GitHub Actions
 on: push
 jobs:
-  install:
-    runs-on: ubuntu-latest
-    container: node:14-alpine
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - name: install
-        run: npm install --loglevel=error
-
-      - name: upload-artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: installed-artifact
-          path: node_modules/
-          retention-days: 1
+#  install:
+#    runs-on: ubuntu-latest
+#    container: node:14-alpine
+#    steps:
+#      - name: checkout
+#        uses: actions/checkout@v2
+#
+#      - name: install
+#        run: npm install --loglevel=error
+#
+#      - name: upload-artifact
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: installed-artifact
+#          paths: node_modules/
+#          retention-days: 1
   lint:
     needs: install
     runs-on: ubuntu-latest
@@ -25,10 +25,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: download-artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: my-artifact
       - name: lint
         run: npm run lint
 
@@ -41,11 +37,6 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-
-      - name: download-artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: my-artifact
 
       - name: test
         run: npm run test
