--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint-fix": "eslint --ext=.js,vue --fix --ignore-path .gitignore .",
     "generate": "nuxt generate",
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/eslint-config-typescript": "^6.0.1",
+    "@nuxtjs/eslint-module": "^3.0.2",
     "core-js": "^3.15.1",
+    "eslint-plugin-nuxt": "^2.0.0",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
@@ -19,6 +24,7 @@
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
+    "eslint": "^8.0.1",
     "jest": "^27.0.5",
     "ts-jest": "^27.0.3",
     "vue-jest": "^3.0.4"
